--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 </head>
 <body>
-    <header class="container">
+    <header class="container color">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">
@@ -22,24 +22,26 @@
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                   <a class="nav-link" href="#">Shoes</a>
-                  <a class="nav-link" href="#">Backpack</a>
+                  <a class="nav-link" href="#">Backpack </a>
                   <a class="nav-link ">subscribe </a>
                 </div>
               </div>
             </div>
           </nav>
-          <section class="slider">
+          <section class="slider slider-co">
             <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                    <div class="row d-flex align-items-center">
                        <div class="col-md-7 ">
-                          <h1>Cool dode Headphon</h1>
+                          <div class="code-slider">
+                            <h1>Cool dode Headphon</h1>
                           <p>
                             This is the best headphone in the world for people who just want to waste time in front of funky world.
                            </p>
                            <h3>$450</h3>
                            <div class="btn btn-warning">Bay now</div>
+                          </div>
                        </div>
                        <div class="col-md-5">
                         <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
@@ -88,7 +90,7 @@
     </header>
 
     <main class="mt-5">
-      <section class="container overflow-hidden mt-4">
+      <section class="container overflow-hidden card-style mt-4">
 
         <div class="container px-4">
           <div class="row gx-5">
@@ -204,7 +206,7 @@
           </div>
       </section>
 
-      <section class="bg-primary d-flex align-items-center d-flex justify-content-center mt-5 rounded shadow"style="height: 300px;">
+      <section class="contect-s d-flex align-items-center d-flex justify-content-center mt-5 rounded shadow"style="height: 300px;">
         <div >
           <h1> LET'S STAY IN TOUCH
           </h1>
@@ -215,7 +217,7 @@
       </section>
     </main>
 
-    <footer class="text-center mt-5">
+    <footer class="text-center mt-5 ">
       
         <small>©2021. Mostofa Kamal. All rights reserved.</small> 
       
