--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="#">Shoes</a>
-                  <a class="nav-link" href="#">Backpack </a>
-                  <a class="nav-link ">subscribe </a>
+                  <a class="nav-link" href="#shoes">Shoes</a>
+                  <a class="nav-link" href="#backpack">Backpack </a>
+                  <a class="nav-link " href="#subscribe">subscribe </a>
                 </div>
               </div>
             </div>
@@ -93,7 +93,7 @@
       <section class="container overflow-hidden card-style mt-4">
 
         <div class="container px-4">
-          <div class="row gx-5">
+          <div class="row g-5">
             <div class="col">
              <div class="p-3 rounded bg-warning d-flex align-items-center justify-content-around ">
                <h1 class="text-white">WATCH</h1>
@@ -116,7 +116,7 @@
           </div>
         </div>
       </section>
-      <section class="mt-5 container">
+      <section class="mt-5 container" id="shoes">
         <h1>Shoes</h1>
         <section >
           <div class="row row-cols-1 row-cols-md-3 g-4">
@@ -162,7 +162,7 @@
         </section>
 
        
-        <section class="mt-5">
+        <section class="mt-5 " id="backpack">
           <h1>Backpack</h1>
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col ">
@@ -206,7 +206,10 @@
           </div>
       </section>
 
-      <section class="contect-s d-flex align-items-center d-flex justify-content-center mt-5 rounded shadow"style="height: 300px;">
+      <section class=" mt5 rounded shadow">
+        <h1>Subscribe</h1>
+      <section class="contect-s d-flex align-items-center d-flex justify-content-center "style="height: 300px;" id="subscribe">
+        
         <div >
           <h1> LET'S STAY IN TOUCH
           </h1>
@@ -214,6 +217,7 @@
         <input type="text">
         <button class="btn btn-warning">submit</button>
       </div>
+      </section>
       </section>
     </main>
 
